@@ -4,6 +4,9 @@ Products.CMFCalendar Changelog
 2.2.0 (unreleased)
 ------------------
 
+- ZMI: Removed the ability to create content from the ZMI. It was never
+  fully supported and carried the risk of creating half-formed content.
+
 - Event: 'addEvent' no longer sends add events.
 
 - profiles: Removed obsolete local import step registrations.
